# horsetail

./: meson.build  meson_options.txt
.zed/: debug.json  keymap.json  settings.json  tasks.json
data/: meson.build
data/builtin/: simple.frag.glsl  simple.vert.glsl  simple_mvp.vert.glsl
include/horsetail/: array.h  array.hpp  au.h  clk.h  core.h  defs.h  en.h  event.h  fs.h  hashtable.hpp  horsetail.h  impl.h  in.h  log.h  math.h  matrix.h  mem.h  rs.h  spr.h  string.h  util.h  vector.h  vg.h
lib/: libEGL.dylib
src/: au.c  clk.c  event.c  horsetail_private.h  impl_sdl.c  in.c  lg.cpp  main.c  mem.c  mem_arena.c  meson.build  rs.cpp  spr.c  vg_gl.c  vg_texture.cpp
src/core/: event.c  main.c  util.c
src/en/: en.c
src/fs/: fs.c
src/impl/: sdl.c  unix.c
src/lg/: lg.c  lg.cpp
src/lib/: array.c  hashtable.c  hashtable.cpp  math.c  math.cpp  string.c  util.c
src/mem/: arena.c  mem.c
src/rs/: rs.c  rs.cpp
src/vg/: display.c  mesh.cpp  vg.c  vg.cpp  vg_gl.c  vg_gl.h  vgp.h
tools/: incbin.py
