horsetail_sources += files(
  'core/event.c',
  'core/main.c',
  'clk/clk.c',
  'fs/fs.c',
  'en/en.c',
  'impl/sdl.c',
  'impl/unix.c',
  'in/in.c',
  'lg/lg.cpp',
  'lib/array.c',
  'lib/hashtable.cpp',
  'lib/math.c',
  'lib/math.cpp',
  'lib/string.c',
  'lib/util.c',
  'mem/mem.c',
  'rs/rs.cpp',
  'vendor/stb_image.c',
  'vg/vg.cpp',
  'vg/vg_gl.c',
  'vg/display.c',
)
