horsetail_sources += files(
  'core/event.c',
  'core/main.c',
  'clk/clk.c',
  'fs/fs.c',
  'en/en.c',
  'impl/sdl.c',
  'impl/unix.c',
  'in/in.c',
  'lg/lg.cpp',
  'lib/math.c',
  'lib/math.cpp',
  'lib/string.c',
  'lib/util.c',
  'mem/mem.c',
  'rs/rs.cpp',
  'spr/spr.c',
  'vendor/stb_image.c',
  'vg/display.c',
  'vg/mesh.cpp',
  'vg/texture.cpp',
  'vg/vg.cpp',
  'vg/vg_gl.c',
)
