horsetail_sources += files(
  'event.c',
  'main.c',
  'clk.c',
  'fs.c',
  'en.c',
  'impl_sdl.c',
  'impl_unix.c',
  'in.c',
  'lg.cpp',
  'math.c',
  'math.cpp',
  'string.c',
  'util.c',
  'mem.c',
  'rs.cpp',
  'spr.c',
  'vendor/stb_image.c',
  'vg_display.c',
  'vg_mesh.cpp',
  'vg_texture.cpp',
  'vg.cpp',
  'vg_gl.c',
)
